--- a/first-ts-app/tsconfig.json
+++ b/first-ts-app/tsconfig.json
@@ -7,7 +7,7 @@
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
     "module": "esnext",
-    "target": "es2015",
+    "target": "ES6",
     "types": [],
     // For nodejs:
     // "lib": ["esnext"],
